add count vehicles  function for regulator , update sawgger and  test cases
